RESOLVED FIXED167159
Crash when changing video subtitles.
https://bugs.webkit.org/show_bug.cgi?id=167159
Summary Crash when changing video subtitles.
Per Arne Vollan
Reported 2017-01-18 05:46:22 PST
When changing video captions during playback in MiniBrowser, I get an access violation crash with the stack trace: 0 WebCore::Element::getBoundingClientRect() + 32 1 WebCore::VTTRegion::willRemoveTextTrackCueBox(WebCore::VTTCueBox*) + 44 2 WebCore::VTTRegion::willRemoveTextTrackCueBox(WebCore::VTTCueBox*) + 44 3 WebCore::VTTCue::removeDisplayTree() + 72 4 WebCore::TextTrack::setMode(WTF::AtomicString const&) + 320 5 WebCore::HTMLMediaElement::setSelectedTextTrack(WebCore::TextTrack*) + 308
Attachments
Patch (1.27 KB, patch)
2017-01-18 06:15 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2017-01-18 06:00:26 PST
Per Arne Vollan
Comment 2 2017-01-18 06:15:24 PST
Per Arne Vollan
Comment 3 2017-01-18 10:21:41 PST
Comment on attachment 299135 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4 2017-01-18 10:47:10 PST
Comment on attachment 299135 [details] Patch Clearing flags on attachment: 299135 Committed r210855: <http://trac.webkit.org/changeset/210855>
WebKit Commit Bot
Comment 5 2017-01-18 10:47:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.