Crash when changing video subtitles. https://bugs.webkit.org/show_bug.cgi?id=167159

Reviewed by Xabier Rodriguez-Calvar.

Add null pointer check.

* html/track/VTTCue.cpp:
(WebCore::VTTCue::removeDisplayTree):


Canonical link: https://commits.webkit.org/184207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210855 268f45cc-cd09-0410-ab3c-d52691b4dbfc